Further rebuttal modifications - BALD, KL

--- a/configs/algorithm/scorebo_j_kl.yaml
+++ b/configs/algorithm/scorebo_j_kl.yaml
@@ -1,6 +1,6 @@
-name: ScoreBO_J_HR
+name: ScoreBO_J_KL
 acq_func: ScoreBO_J
 init_type: sobol
 acq_kwargs:
   num_optima: 8
-  distance_metric: HR
+  distance_metric: KL
